# manga-translator

./: .gitignore  .gitmodules  .oo-thumbnail.zh-CN.json  .pylintrc  MIGRATION_SUMMARY.md  README-zh.md  README.md  README_cn.md  README_zh-CN.md  TROUBLESHOOTING.md  config.json  package.oo.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
.github/workflows/: export-layer.yml  layer.yml  publish.yml
flows/batch-translate-manga/: .flow.ui.oo.json  flow.oo.yaml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/pdf-batch/: .flow.ui.oo.json  flow.oo.yaml
flows/test-manga-translate/: .flow.ui.oo.json  flow.oo.yaml
flows/translate-images-to-images/: .flow.ui.oo.json  flow.oo.yaml
flows/translate-images-to-images/scriptlets/: +javascript#1.js
flows/translate-manga/: .flow.ui.oo.json  flow.oo.yaml
flows/translate-manga-book/: .flow.ui.oo.json  flow.oo.yaml
flows/translate-manga-books/: .flow.ui.oo.json  flow.oo.yaml
flows/translate-manga-pdf/: .flow.ui.oo.json  flow.oo.yaml
flows/translate-manga-pdf/scriptlets/: +scriptlet#1.py
flows/translate-manga/scriptlets/: +python#3.py
flows/translate-pdf-to-pdf/: .flow.ui.oo.json  flow.oo.yaml
flows/translate-single-manga-page/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
scripts/: setup.sh
shared/: __init__.py  config.py  image.py  manga.py  translator.py
shared/manga_translator/: __init__.py  manga.py  translator.py  types.py
shared/manga_translator_core/: __main__.py  api_client.py  config.py
slotflows/+slotflow#1/: .slotflow.ui.oo.json  slotflow.oo.yaml
subflows/pdf_batch_process/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/translate-manga-book/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/translate-manga-books/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/translate-manga-pdf/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/translate_pdf_manga/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/extract-images/: __init__.py  task.oo.yaml
tasks/manga-invoker/: __init__.py  manga_creator.py  task.oo.yaml
tasks/translate-manga/: __init__.py  config.json  run.py  task.oo.yaml
tasks/translate-manga-images/: __init__.py  task.oo.yaml
tasks/translate-manga-page/: __init__.py  task.oo.yaml
tasks/translate_pages/: task.oo.yaml
tasks/translate_single_page/: task.oo.yaml
(+20 files in other folders)
