[project]
name = "manga-translator"
version = "0.1.0"
description = ""
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # for this wrapper
    "langchain-core (==0.3.25)",
    "langchain-community (==0.3.12)",
    "langchain-openai (==0.2.12)",

    # for manga-images-translator
    "colorama (==0.4.6)",
    "openai (==1.68.2)",
    "httpx (==0.27.2)", # stop before blocking change in 0.28.0
    "open-clip-torch (==2.31.0)",
    "safetensors (==0.5.3)",
    "pandas (==2.2.3)",
    "onnxruntime (==1.21.0)",
    "timm (==1.0.15)",
    "omegaconf (==2.3.0)",
    "python-dotenv (==1.0.1)",
    "nest-asyncio (==1.6.0)",
    "marshmallow (==3.26.1)",
    "cython (==3.0.12)",
    "aioshutil (==1.5)",
    "aiofiles (==24.1.0)",
    "arabic-reshaper (==3.0.0)",
    "pyhyphen (==4.0.4)",
    "langcodes (==3.5.0)",
    "manga-ocr (==0.1.14)",
    "langdetect (==1.0.9)",
    "accelerate (==1.5.2)",
    "bitsandbytes (==0.42.0)",
    "uvicorn (==0.34.0)",
    "fastapi (==0.115.12)",
    "pydantic (==2.10.6)",
    "python-multipart (==0.0.20)",
    "paddleocr (==2.10.0)",
    "rich (==13.9.4)",
    "networkx (==3.4.2)",
    "torch (==2.6.0)",
    "groq (==0.20.0)",
    "torchvision (==0.21.0)",
    "torch-summary (==1.4.5)",
    "einops (==0.8.1)",
    "scikit-image (==0.25.2)",
    "opencv-python (==4.11.0.86)",
    "pyclipper (==1.3.0.post6)",
    "shapely (==2.0.7)",
    "requests (==2.32.3)",
    "cryptography (==44.0.2)",
    "freetype-py (==2.5.1)",
    "aiohttp (==3.11.14)",
    "tqdm (==4.67.1)",
    "deepl (==1.21.1)",
    "imagehash (==4.3.2)",
    "kornia (==0.8.0)",
    "backports-cached-property (==1.0.2)",
    "huggingface-hub (==0.29.3)",
    "transformers (==4.50.0)",
    "py3langid (==0.2.2)",
    "sentencepiece (==0.2.0)",
    "editdistance (==0.8.1)",
    "numpy (==1.26.4)",
    "tensorboardx (==2.6.2.2)",
    "websockets (==15.0.1)",
    "protobuf (==6.30.1)",
    "pydensecrf @ https://github.com/lucasb-eyer/pydensecrf/archive/2723c7fa4f2ead16ae1ce3d8afe977724bb8f87f.zip",
    "ctranslate2 (==3.24.0)" # last version compatible with CUDA 11
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
